# mysmallutils

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties  test2.txt  test3.txt  test4.txt
mysutils/: cli.py  collections.py  command.py  compress.py  config.py  fastapi.py  file.py  flaskservice.py  git.py  hash.py  logging.py  method.py  metrics.py  misc.py  request.py  service.py  tar.py  text.py  time.py  tmp.py  unittest.py  web.py  yaml.py
mysutils/collections/: __init__.py  fifoqueuethread.py  lrudict.py  orderedset.py  utils.py
test/: collectionstests.py  commandtests.py  compresstests.py  configtests.py  fastapitest.py  filetests.py  loggingtests.py  tartests.py  temptests.py  test_command.py  test_fifoqueue.py  test_file.py  test_hash.py  test_method.py  test_misc.py  test_orderedset.py  texttests.py  webtests.py
test/data/: test_replace_url.html  test_replace_url.md  test_replaced_url_01.html  test_replaced_url_02.html  test_replaced_url_03.html  test_replaced_url_04.html  test_replaced_url_05.html
tests/: test_cli.py  test_collections.py  test_fastapi.py  test_file.py  test_misc.py  test_tar.py  test_time.py  test_web.py
tests/data/: test_replace_url.md  test_replaced_url_01.html  test_replaced_url_04.html  test_replaced_url_06.html  test_replaced_url_07.html
